--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "core-js": "^3.6.4",
+    "emailjs-com": "^2.4.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.5",
+    "vue-i18n": "^8.17.4",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
