--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://SergeyPush.github.io/your-accountant",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "core-js": "^3.6.4",
     "emailjs-com": "^2.4.1",
+    "gh-pages": "^2.2.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.5",
