--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^2.4.1",
     "gh-pages": "^2.2.0",
     "register-service-worker": "^1.7.1",
+    "v-mask": "^2.1.0",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.5",
     "vue-i18n": "^8.17.4",
