--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-burger-menu": "^2.0.5",
     "vue-i18n": "^8.17.4",
     "vue-router": "^3.1.6",
+    "vue-scroll-reveal": "^1.0.11",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
