--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
-  "homepage": "https://SergeyPush.github.io/your-accountant",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "core-js": "^3.6.4",
@@ -25,6 +24,8 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@fullhuman/vue-cli-plugin-purgecss": "~2.2.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-pwa": "~4.3.0",
@@ -37,5 +38,6 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "homepage": "https://SergeyPush.github.io/your-accountant"
 }
