--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@guillaumebriday/vue-scroll-progress-bar": "^1.0.0",
     "core-js": "^3.6.4",
     "emailjs-com": "^2.4.1",
     "gh-pages": "^2.2.0",
