--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.4",
     "emailjs-com": "^2.4.1",
     "gh-pages": "^2.2.0",
+    "gsap": "^3.6.0",
     "register-service-worker": "^1.7.1",
     "v-mask": "^2.1.0",
     "vue": "^2.6.11",
