--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "v-mask": "^2.1.0",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.5",
+    "vue-carousel": "^0.18.0",
     "vue-i18n": "^8.17.4",
     "vue-router": "^3.1.6",
     "vue-scroll-reveal": "^1.0.11",
